--- a/devops.html
+++ b/devops.html
@@ -38,8 +38,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://abcfinlab.join.com/jobs/448535-devops-engineer-m-w-x'>Job @ abcfinlab (Cologne): DevOps Engineer (m/w/x) | JOIN</a></h5> 
+<h5><a href='https://jobs.jobvite.com/stars-group/job/ogyrbfwa'>The Stars Group Careers - Graduate DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/stars-group/job/orzrbfwm'>The Stars Group Careers - Senior DevOps Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q0KaVfwz&k=Job&j=o9Qrbfwl&__jvst=Employee+Referral+&__jvsd=s2Lp2iw1&__jvsc=Twitter&bid=nmCUnMww'>Litera Microsystems Careers - DevOps Engineer</a></h5> 
+<p><span class="badge badge-light">Chicago, Illinois</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://abcfinlab.join.com/jobs/448535-devops-engineer-m-w-x'>Job @ abcfinlab (Cologne): DevOps Engineer (m/w/x) | JOIN</a></h5> 
+<p><span class="badge badge-light">Cologne Cologne</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/quadient/job/oj4rbfwJ'>Quadient Careers - Ing?nieur Syst?me DevOps</a></h5> 
@@ -50,11 +62,11 @@
 <p><span class="badge badge-light">Plano, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axiomzen/cbb485b5-eb70-49bb-9dc6-e1576015203b'>Axiom Zen - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/axiomzen/cbb485b5-eb70-49bb-9dc6-e1576015203b'>Axiom Zen - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Vancouver, BC  Vancouver</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698395981-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698395981-fresher-devops-software-engineer'>KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -66,7 +78,7 @@
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374645-cloud-administrator-devops-ubisoft-cloud-'>Ubisoft Cloud Administrator (Devops - Ubisoft Cloud) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698374645-cloud-administrator-devops-ubisoft-cloud-'>Ubisoft Cloud Administrator (Devops - Ubisoft Cloud) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada  Montreal Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -185,7 +197,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/paloaltonetworks/job/oPb1afwV'>Palo Alto Networks Careers - DevOps SRE Engineer (Information Security)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Tel Aviv, Israel  Palo Alto</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -201,7 +213,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">London London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584548'>Stellenangebot: Systemadministrator Linux mit Schwerpunkt DevOps (m/w/d) (Erlangen) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584548'>Stellenangebot: Systemadministrator Linux mit Schwerpunkt DevOps (m/w/d) (Erlangen) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -241,7 +253,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oQpmafwv&__jvst=Employee+Referral&__jvsd=sSaLPhwo&__jvsc=Twitter&bid=nSeIlMwq'>NICE Actimize Careers - Specialist DevOps Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oQpmafwv&__jvst=Employee+Referral&__jvsd=sSaLPhwo&__jvsc=Twitter&bid=nSeIlMwq'>NICE Actimize Careers - Specialist DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -253,7 +265,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/instride/b3dbf4e9-034e-4590-8221-9f38f8d9b284'>InStride - DevOps</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/instride/b3dbf4e9-034e-4590-8221-9f38f8d9b284'>InStride - DevOps</a></h5> 
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -265,7 +277,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241190-senior-system-engineer-devops-'>Netcentric Senior System Engineer (DevOps) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241190-senior-system-engineer-devops-'>Netcentric Senior System Engineer (DevOps) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -293,7 +305,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698033097-devops-engineer'>onepoint DevOps Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/onepoint/743999698033097-devops-engineer'>onepoint DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -305,7 +317,7 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">Singapore Philippines  Singapore Philippines Singapore  Singapore</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endava.referrals.selectminds.com/jobs/devops-engineer-microsoft-azure-5133'>Devops Engineer - Microsoft Azure - Endava Careers</a></h5> 
+<h5><a href='https://endava.referrals.selectminds.com/jobs/devops-engineer-microsoft-azure-5133'>Devops Engineer - Microsoft Azure - Endava Careers</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -334,11 +346,11 @@ faster, more secure and privacy-centric public DNS resolver. This is available?.
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/korewireless/job/o6Tkbfwe'>KORE Careers - Senior DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/korewireless/job/o6Tkbfwe'>KORE Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Canada  Winnipeg, MB</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/blackline/job/olbpbfwQ'>BlackLine Careers - Senior DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/blackline/job/olbpbfwQ'>BlackLine Careers - Senior DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -370,7 +382,7 @@ of?...</p>
 <p><span class="badge badge-light">Chicago Chicago</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kyivstar/2b5c0218-d07c-4ff8-adfc-cc4fb9cd212c'>Kyivstar - DevOps Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kyivstar/2b5c0218-d07c-4ff8-adfc-cc4fb9cd212c'>Kyivstar - DevOps Engineer</a></h5> 
 <p><span class="badge badge-light">Kyiv, Ukraine</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -440,19 +452,7 @@ of?...</p>
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oQVLafwq&__jvst=Employee+Referral&__jvsd=shUBLhwj&__jvsc=Twitter&bid=ne3glMw9'>Jobvite, Inc. Careers - Senior DevOps Tooling Engineer (remote)</a></h5> 
-<p><span class="badge badge-light">San Mateo, California</span></p>
-<p>Posted on:: 2019-10-26</p>
-<hr/>
-<h5><a href='https://aluperf.referrals.selectminds.com/jobs/co-op-software-engineer-devops-36817'>Co-op Software Engineer - DevOps - Nokia Careers</a></h5> 
-<p><span class="badge badge-light">Ottawa, Ontario</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/trov/jobs/1934232'>Job Application for DevOps Engineer/ SRE at Trov</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
+
 
 <!--End body here -->
 
