--- a/software.html
+++ b/software.html
@@ -39,6 +39,24 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/okcupid/jobs/1934093'>Job Application for Senior Software Engineer, Web at OKCupid</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/blacklane/jobs/4426622002'>Job Application for Backend Software Engineer (f/m/d) at BLACKLANE</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/medallia/b57a8157-7dca-45d6-8d47-d4faa27537c6'>Medallia - Senior Software Engineer, Frontend</a></h5> 
+<p><span class="badge badge-light">Carlsbad, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://searchmetrics.recruitee.com/o/senior-software-engineer-mfx-focus-frontend'>
+      Senior Software Engineer (m/f/x) - Focus Frontend - Searchmetrics GmbH
+    </a></h5> 
+<p><span class="badge badge-light">Berlin, Germany</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Omio1/743999698304591-senior-software-engineer-backend-coverage-foundation-team-m-f-d-'>Omio Senior Software Engineer - Backend / Coverage Foundation Team (m / f / d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-29</p>
@@ -51,7 +69,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/appian/jobs/1937981'>Job Application for Senior Software Engineer - Performance at Appian Corporation </a></h5> 
+<h5><a href='https://boards.greenhouse.io/appian/jobs/1937981'>Job Application for Senior Software Engineer - Performance at Appian Corporation </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -87,7 +105,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://idana.join.com/jobs/467440-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
+<h5><a href='https://idana.join.com/jobs/467440-fullstack-software-engineer-typescript-m-f-d'>Job @ Tomes (Remote): Fullstack Software Engineer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -123,7 +141,7 @@
 <p><span class="badge badge-light">Canada  Montreal</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oY5P8fwK&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n8tInMwX'>Gigamon Careers - Senior Software Engineer ? Mobility</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qtA9VfwR&k=Job&j=oY5P8fwK&__jvst=Employee&__jvsd=sOfTShwA&__jvsc=Twitter&bid=n8tInMwX'>Gigamon Careers - Senior Software Engineer ? Mobility</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CASanta Clara, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -187,7 +205,7 @@
 <p><span class="badge badge-light">Tampa, FL</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409644-entry-level-software-developer'>LaunchCode Entry Level Software Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409644-entry-level-software-developer'>LaunchCode Entry Level Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -251,7 +269,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o98pbfwB&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nGO6mMwd'>Benefitfocus Careers - Sr. Software Engineer - AI</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=o98pbfwB&__jvst=Employee&__jvsd=sFU2Kgw6&__jvsc=Twitter&bid=nGO6mMwd'>Benefitfocus Careers - Sr. Software Engineer - AI</a></h5> 
 <p><span class="badge badge-light">Charleston, South Carolina</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -259,7 +277,7 @@
 <p><span class="badge badge-light">Los Angeles, CA</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999698373143-backend-software-engineer-go-developer-'>Greppy Systems Backend Software Engineer (Go Developer) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GreppySystems/743999698373143-backend-software-engineer-go-developer-'>Greppy Systems Backend Software Engineer (Go Developer) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -275,11 +293,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914739'>Job Application for Senior Software Engineer_Marketing Platform at Coupang</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1914739'>Job Application for Senior Software Engineer_Marketing Platform at Coupang</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1914938'>Job Application for Principal Software Engineer_Marketing Platform at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914938'>Job Application for Principal Software Engineer_Marketing Platform at Coupang</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -315,7 +333,7 @@
 <p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/biofiredx/job/o2blbfwt'>BioFire Diagnostics, LLC. Careers - Software Engineer II/III</a></h5> 
+<h5><a href='http://jobs.jobvite.com/biofiredx/job/o2blbfwt'>BioFire Diagnostics, LLC. Careers - Software Engineer II/III</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -329,7 +347,7 @@
 <p><span class="badge badge-light">S?o Paulo S?o Paulo</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://hire.withgoogle.com/public/jobs/xenditco/view/P_AAAAAAEAAE9JRbnQBFZ3kW'>Senior Software Engineer - Invoice Team job in  Jakarta, Indonesia at Xendit</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hire.withgoogle.com/public/jobs/xenditco/view/P_AAAAAAEAAE9JRbnQBFZ3kW'>Senior Software Engineer - Invoice Team job in  Jakarta, Indonesia at Xendit</a></h5> 
 <p><span class="badge badge-light">Jakarta, Indonesia Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -361,7 +379,7 @@
 <p><span class="badge badge-light">Austin, Texas</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=n0LYmMwm'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oiFvafwm&__jvst=Employee+Referral&__jvsd=sgklXhwE&__jvsc=Twitter&bid=n0LYmMwm'>ServiceNow Careers - Full Stack Software Engineer-CSM</a></h5> 
 <p><span class="badge badge-light">Santa Clara, California  Santa Clara, CA</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -417,29 +435,13 @@
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698350907-senior-react-native-software-engineer-joining-bonus-'>KMS Technology SENIOR REACT NATIVE SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KMSTechnology1/743999698350907-senior-react-native-software-engineer-joining-bonus-'>KMS Technology SENIOR REACT NATIVE SOFTWARE ENGINEER (Joining Bonus) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Vietnam</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/bjss/jobs/1931346'>Job Application for Software Engineer  at BJSS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qB09Vfwp&k=Job&j=oRN7afwF&__jvst=Employee+Referral&__jvsd=sXKg3hwM&__jvsc=Twitter&bid=nFnWmMwB'>NICE Actimize Careers - Expert Software Developer - AWS</a></h5> 
-<p><span class="badge badge-light">Raanana, Israel</span></p>
-<p>Posted on:: 2019-10-29</p>
-<hr/>
-<h5><a href='https://itron.referrals.selectminds.com/jobs/software-engineer-3014'>Software Engineer - Itron Careers</a></h5> 
-<p><span class="badge badge-light">Washington, United States</span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/icertis/31eef823-b754-4902-8deb-18ad301d2d24'>Icertis - Senior Software Engineer - Platform Engineering (Salesforce)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-29</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/j2-global/job/olsnbfw5'>J2 Global Careers - Java - Cloud Software Developer - Vipre</a></h5> 
-<p><span class="badge badge-light">Herndon, Virginia  Vancouver Philippines</span></p>
-<p>Posted on: 2019-10-28</p>
 <hr/>
 
 
